Agregando componente succes y Ajustando detalles

--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <!-- displays site properly based on user's device -->
     <title>Contact form</title>
   </head>
-  <body>
+  <body class="relative">
     <main id="app"></main>
-    <!--
-  Message Sent!
-  Thanks for completing the form. We'll be in touch soon! -->
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
